# SDGhackathon

backend/: .gitignore  add_bulk_students.py  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3c54831bebab_add_phone_to_students.py  839dde5f3fe7_quiz_teacher_fk_and_assigned_dept.py  a1b2c3d4e5f6_peer_requests_and_conversations.py  a8b9c0d1e2f3_add_study_resources_table.py  aa11bb22cc33_add_student_notification_seen.py  b1c2d3e4f5a6_add_peer_blocks.py  b9c0d1e2f3a4_add_study_streaks_table.py  bb22cc33dd44_add_chat_attachments.py  c1d2e3f4a5b6_add_attendance_table.py  c9d0e1f2a3b5_add_cis_tables.py  cc33dd44ee55_add_department_courses_and_units.py  d2e3f4a5b6c1_add_student_competitions.py  e3f4a5b6c1d2_add_leetcode_id_to_students.py  f2ffb28c05c0_replace_cohort_with_dept_section_batch.py  f60439556b6b_add_assignments_and_submissions.py
backend/app/: celery_app.py  database.py  ml_engine.py  models.py  rbac.py  schemas.py  security.py  seed.py
backend/app/chroma/: chroma_client.py
backend/app/ml/: cis_engine.py  seed_cis.py
backend/app/routers/: assignments.py  attendance.py  auth.py  chat.py  cis.py  competitions.py  courses.py  dashboard.py  exam_marks.py  forum.py  intelligence.py  quiz.py  resources.py  students.py  teachers.py
backend/app/schemas/: __init__.py  cis.py
backend/app/services/: embedding_service.py  file_parser.py  resource_processing.py  streak_service.py  youtube_rag.py
backend/app/tasks/: cis_tasks.py  resource_tasks.py
backend/app/tests/: test_cis.py
backend/chroma_data/: chroma.sqlite3
(+30 files in other folders)
